<resources>
    <string name="app_name">Task Organizer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">Lista de Tareas</string>
    <string name="menu_creation">Crear Tarea</string>
    <string name="menu_gallery">Buscar Tareas</string>
    <string name="menu_calendar">Calendario</string>
    <string name="menu_logout">Salir</string>
</resources>